WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
35248
[Qt] QtLauncher should not use internal JavaScriptCore and WebCore interfaces
https://bugs.webkit.org/show_bug.cgi?id=35248
Summary
[Qt] QtLauncher should not use internal JavaScriptCore and WebCore interfaces
Laszlo Gombos
Reported
2010-02-22 10:43:34 PST
Eliminate the internal dependency - mostly on wtf.
Attachments
proposed change
(1.66 KB, patch)
2010-02-22 12:57 PST
,
Laszlo Gombos
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Laszlo Gombos
Comment 1
2010-02-22 12:20:10 PST
I changed the goal to QtLauncher only as DumprenderTree for other ports use wtf, and Qt port use pieces of DumpRenderTree from other ports (e.g. WorkQueue.cpp).
Laszlo Gombos
Comment 2
2010-02-22 12:57:47 PST
Created
attachment 49236
[details]
proposed change
WebKit Commit Bot
Comment 3
2010-02-23 02:03:31 PST
Comment on
attachment 49236
[details]
proposed change Clearing flags on attachment: 49236 Committed
r55134
: <
http://trac.webkit.org/changeset/55134
>
WebKit Commit Bot
Comment 4
2010-02-23 02:03:36 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug