2010-02-23  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

Reviewed by Kenneth Rohde Christiansen.

        [Qt] QtLauncher should not use internal JavaScriptCore and WebCore interfaces
        https://bugs.webkit.org/show_bug.cgi?id=35248

        * QtLauncher/QtLauncher.pro:
        * QtLauncher/utils.h:

Canonical link: https://commits.webkit.org/46436@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@55134 268f45cc-cd09-0410-ab3c-d52691b4dbfc